examples/test/testpolicy12285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12285
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key15: value8
      key10: value33
      key34: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
          key25: value20
      podSelector:
        matchLabels:
          key11: value41
          key32: value19
          key10: value32
